# advent-of-code-2021

./: Cargo.toml  Jenkinsfile  README.md
.github/workflows/: rust.yml
crates/bindiag/: Cargo.toml
crates/bindiag/src/: main.rs
crates/dive/: Cargo.toml
crates/dive/src/: main.rs
crates/giantsquid/: Cargo.toml
crates/giantsquid/src/: main.rs
crates/lanternfish/: Cargo.toml
crates/lanternfish/src/: main.rs
crates/smokebasin/: Cargo.toml
crates/smokebasin/src/: main.rs
crates/sonarsweep/: Cargo.toml
crates/sonarsweep/src/: main.rs
crates/util/: Cargo.toml
crates/util/src/: lib.rs
crates/vents/: Cargo.toml
crates/vents/src/: main.rs
crates/whales/: Cargo.toml
crates/whales/src/: main.rs
