[package]
name = "sonarsweep"
version = "0.0.1"
edition = "2018"


[dependencies]
clap = "3.0.0-beta.2"
# colored = "2.0.0"
# rand = "0.8.4"        # Random number generators and other randomness functionality.
# strum = "0.21.0"      # Helpful macros for working with enums and strings
# strum_macros = "0.21" # Helpful macros for working with enums and strings